--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ edition = "2021"
 evie-ui = { path = "crates/ui" }
 
 [workspace.dependencies]
+dashmap = "6.1"
 ropey = "1.6"
 tokio = { version = "1.43", features = ["full"] }
