--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 dashmap = { workspace = true }
 iced = { version = "0.13", features = ["advanced"] }
+iced_fonts = "0.1"
 iced_renderer = "0.13"
 rfd = "0.15"
 ropey = { workspace = true }
